--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@ body{
     width: 100%;
     height: 4em;
     font-weight: lighter;
+    z-index: 100;
 }
 
 .header-apla{
